openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    chart: cloudnativesampleapp-1.0.0
  name: cloudnative-sample
  namespace: demo-gitops-app
spec:
  port:
    targetPort: 9080
  to:
    kind: Service
    name: cloudnativesampleapp-service
